# cv_analizer

./: app.py  main.py  pyproject.toml
models/: cv_model.py
services/: cv_evaluator.py  pdf_processor.py
ui/: streamlit_ui.py
