[project]
name = "analisis-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.2",
    "langchain-core>=1.1.1",
    "langchain-openai>=1.1.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.52.2",
]
